--- a/queryScore.do/index.html
+++ b/queryScore.do/index.html
@@ -1,7 +1,12 @@
 
 <!-- saved from url=(0053)http://www.chinesetest.cn/queryScore.do?zsid=15318823 -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link rel="stylesheet" href="../hsk_spartak_files/phone.css" type="text/css">
-</head><body><div class="well-sm">
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<link rel="stylesheet" href="../hsk_spartak_files/phone.css" type="text/css">
+	<script src="../script.js"></script>
+</head>
+<body><div class="well-sm">
 	
 	<center>
 	  <h2>汉语考试成绩在线验证结果查询</h2>
